# yorijori

./: .gitignore  .project  README.md  package-lock.json
.gitlab/issue_templates/: ✅Feature request.md  🐞Bug  🛠️Task Request.md
.metadata/: .lock_info  version.ini
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
AI/PaddleOCR/: Dockerfile  docker-compose.yml  readme.md  requirements.txt
AI/PaddleOCR/app/: main.py
AI/PaddleOCR/app/static/: ocr_test.html
apps/ai/PaddleOCR/: Dockerfile  docker-compose.yml  requirements.txt
apps/ai/PaddleOCR/app/: main.py
apps/ai/PaddleOCR/k8s/: deployment.yaml  hpa.yaml  service.yaml
apps/ai/PaddleOCR/uploads/: test
apps/backend/: Dockerfile  Jenkinsfile  build.gradle
apps/backend/k8s/: deployment.yaml  namespace.yaml
apps/backend/k8s/app/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
apps/backend/k8s/mysql/: mysql-configmap.yaml  mysql-deployment.yaml  mysql-pv.yaml  mysql-pvc.yaml  mysql-service.yaml
apps/backend/k8s/postgresql/: postgresql-deployment.yaml  postgresql-pv.yaml  postgresql-pvc.yaml  postgresql-service.yaml
apps/frontend/: Jenkinsfile
apps/frontend/admin/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
apps/frontend/customer/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
apps/frontend/customer/src/: App.vue
apps/frontend/rider/: .gitignore  Dockerfile  Jenkinsfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
apps/robotics/: README.md  chromium_error_solution  driving  isaac_visual_slam_error  requirments.txt
apps/robotics/ros2_ws/src/test_cpp_pkg/: CMakeLists.txt  package.xml
apps/robotics/ros2_ws/src/test_cpp_pkg/src/: my_node.cpp
apps/robotics/ros2_ws/src/webrtc_streamer_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
apps/robotics/ros2_ws/src/webrtc_streamer_pkg/src/: webrtc_streamer.cpp
apps/robotics/ros2_ws/src/webrtc_streamer_pkg/webrtc_streamer_pkg/: webrtc_streamer.py
argocd/applications/: app-of-apps.yaml  linky-app.yaml
docker/: ai.Dockerfile  backend.Dockerfile  frontend.Dockerfile
jenkins/: Jenkinsfile
k8s/base/: ai-ocr-deployment.yaml  ai-ocr-service.yaml  backend-deployment.yaml  backend-service.yaml  frontend-admin-deployment.yaml  frontend-admin-service.yaml  frontend-user-deployment.yaml  frontend-user-service.yaml  ingress.yaml
linky/: build.gradle
server/: build.gradle
(+341 files in other folders)
