<?xml version="1.0"?>
<package format="3">
  <name>webrtc_streamer_pkg</name>
  <version>0.0.1</version>
  <description>ROS2 node for streaming camera images via GStreamer</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>gstreamer1.0-tools</exec_depend>
  <exec_depend>gstreamer1.0-plugins-base</exec_depend>
  <exec_depend>gstreamer1.0-plugins-good</exec_depend>

</package>
